--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     margin-right: 15px;
 }
 .body {
-    background-color: rgb(240, 214, 143);
+    background-color: rgb(240, 214, 143)
 }
 .contacts {
     background-color: #5e9784;
@@ -117,4 +117,15 @@
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 15px;
+}
+.hed { 
+    margin: 5px;
+    color: rgb(68, 68, 68);
+    text-shadow: 0px 0px 1px black;
+    margin: 5px;
+    font-size: 30px;
+}
+.h1 {
+    margin: 5px;
+    font-size: 30px;
 }
