--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
     margin-right: 15px;
 }
 .body {
-    background-color: rgb(240, 214, 143)
+    background-color: rgb(240, 214, 143);
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+
 }
 .contacts {
     background-color: #5e9784;
@@ -129,3 +133,20 @@
     margin: 5px;
     font-size: 30px;
 }
+.footer a img {
+    height: 50px;
+    width: 50px;
+}
+.footer {
+    margin-top: auto;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.social-buttons {
+    display: flex;
+    margin: 5px;
+}
+.social-buttons p {
+    padding-left: 10px;
+}
+
